// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table applies responsive table 1`] = `
<div>
  <table
    className="ds-c-table ds-c-lg-table--stacked"
    role="table"
  >
    <TableCaption
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table table caption scrollable true applies scroll table wrapper and classes 1`] = `
<Table
  scrollable={true}
  scrollableNotice={
    <Alert
      className="ds-u-margin-y--1 ds-u-font-weight--normal"
      headingLevel="2"
      role="status"
    >
      <p
        className="ds-c-alert__text"
      >
        Scroll using arrow keys to see more
      </p>
    </Alert>
  }
  stackableBreakpoint="sm"
>
  <div
    aria-labelledby="caption-10"
    aria-live="polite"
    aria-relevant="additions"
    className="ds-c-table__wrapper"
    role="region"
    tabIndex={null}
  >
    <table
      className="ds-c-table"
      role="table"
    >
      <TableCaption
        _id="caption-10"
        _scrollActive={false}
        _scrollableNotice={
          <Alert
            className="ds-u-margin-y--1 ds-u-font-weight--normal"
            headingLevel="2"
            role="status"
          >
            <p
              className="ds-c-alert__text"
            >
              Scroll using arrow keys to see more
            </p>
          </Alert>
        }
        key=".0"
      >
        <caption
          className="ds-c-table__caption"
          id="caption-10"
        >
          Foo
        </caption>
      </TableCaption>
    </table>
  </div>
</Table>
`;

exports[`Table table caption scrollable true applies scrollableNotice 1`] = `
<Table
  scrollable={true}
  scrollableNotice="foo scrollable notice"
  stackableBreakpoint="sm"
>
  <div
    aria-labelledby="caption-13"
    aria-live="polite"
    aria-relevant="additions"
    className="ds-c-table__wrapper"
    role="region"
    tabIndex={null}
  >
    <table
      className="ds-c-table"
      role="table"
    >
      <TableCaption
        _id="caption-13"
        _scrollActive={false}
        _scrollableNotice="foo scrollable notice"
        key=".0"
      >
        <caption
          className="ds-c-table__caption"
          id="caption-13"
        >
          Foo
        </caption>
      </TableCaption>
    </table>
  </div>
</Table>
`;
